--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,5 +2,6 @@
   home works!
 </p>
 <div>
-  <button md-button (click)="OnGetEtcdInfo()">Flat button</button>
+  <button>Flat button</button>
+  <button nz-button [nzType]="'primary'">测试按钮</button>
 </div>
